- fork on gitlab patch branch - Setup_Release 폴더 추가

--- a/src/wpf/wpf/App.config
+++ b/src/wpf/wpf/App.config
@@ -42,12 +42,14 @@
 		<add key="WAV_FILE_SAVE_FOLDER" value="Content" />
 		<add key="WAV_FILE_REMOVE_INTERVAL" value="600" />
 		<add key="WAV_FILE_REMOVE_LASTTIME" value="300" />
-		<add key="REST_API_CALL_TIMEOUT" value="500" />
+		<add key="WAV_FILE_REQ_INTERVAL" value="2000" />
+		<add key="REST_API_CALL_TIMEOUT" value="10000" />
 		<add key="FINDDEVICE_API_CALL_TIMEOUT" value="200" />
 		<add key="COLLECTING_SERVER_IP" value="http://10.10.90.4:8080/dashboard/84c675c0-425b-11ee-ba59-413147b4e313?publicId=147c9dd0-4242-11ee-ba59-413147b4e313" />
-		<add key="NODESTAT_SERVER_IP" value="http://10.10.90.4:8080/dashboard/84c675c0-425b-11ee-ba59-413147b4e313?publicId=147c9dd0-4242-11ee-ba59-413147b4e313" />
-		<!--<add key="PREDICT_SERVER_IP" value="13.124.28.76:8081" />-->
-		<add key="CHART_AUTOFIT" value="True" />
+		<add key="PREDICT_SERVER_IP" value="13.124.28.76:8081" />
+		<!--<add key="HISTORY_SERVER_URL" value="http://10.10.129.129:8080/entities/assets/{0}" />-->
+		<!--<add key="EDGE_SERVER_URL" value="http://10.10.90.21:61208/" />-->
+		<add key="CHART_AUTOFIT" value="False" />
 		<add key="CHART_FFT_DISPLAY" value="2" />
 		<add key="CHART_FFT_WINDOW_LENGTH" value="1" />
 		<add key="CHART_HIGH_FREQ" value="5" />
