--- a/src/wpf/wpf/device_info.ini
+++ b/src/wpf/wpf/device_info.ini
@@ -1,4 +1,76 @@
-﻿[DEVICE-01]
+﻿[DEVICE-dev]
+name=DEVICE-dev
+ipaddress=10.10.81.21
+subnet=255.255.255.0
+historyurl=http://www.naver.com
+edgeurl=http://www.google.com
+desc=ICEBERG-DEVICE-08
+guid=
+
+[DEVICE-dev2]
+name=DEVICE-dev2
+ipaddress=10.10.81.22
+subnet=255.255.255.0
+historyurl=http://www.naver.com
+edgeurl=http://www.google.com
+desc=ICEBERG-DEVICE-08
+guid=
+
+[DEVICE-dev3]
+name=DEVICE-dev3
+ipaddress=10.10.81.23
+subnet=255.255.255.0
+historyurl=http://www.naver.com
+edgeurl=http://www.google.com
+desc=ICEBERG-DEVICE-08
+guid=
+
+[DEVICE-dev4]
+name=DEVICE-dev4
+ipaddress=10.10.81.24
+subnet=255.255.255.0
+historyurl=http://www.naver.com
+edgeurl=http://www.google.com
+desc=ICEBERG-DEVICE-08
+guid=
+
+[DEVICE-dev5]
+name=DEVICE-dev5
+ipaddress=10.10.81.25
+subnet=255.255.255.0
+historyurl=http://www.naver.com
+edgeurl=http://www.google.com
+desc=ICEBERG-DEVICE-08
+guid=
+
+[DEVICE-dev6]
+name=DEVICE-dev6
+ipaddress=10.10.81.26
+subnet=255.255.255.0
+historyurl=http://www.naver.com
+edgeurl=http://www.google.com
+desc=ICEBERG-DEVICE-08
+guid=
+
+[DEVICE-dev7]
+name=DEVICE-dev7
+ipaddress=10.10.81.27
+subnet=255.255.255.0
+historyurl=http://www.naver.com
+edgeurl=http://www.google.com
+desc=ICEBERG-DEVICE-08
+guid=
+
+[DEVICE-dev8]
+name=DEVICE-dev8
+ipaddress=10.10.81.28
+subnet=255.255.255.0
+historyurl=http://www.naver.com
+edgeurl=http://www.google.com
+desc=ICEBERG-DEVICE-08
+guid=
+
+[DEVICE-01]
 name=DEVICE-01
 ipaddress=10.10.90.21
 subnet=255.255.255.0
